[package]
name = "moving"
version = "0.1.0"
authors = ["sandmor <sandmor1220@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22"
raw-window-handle = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2"
lazy_static = "1"
