[package]
name = "moving"
version = "0.1.0"
authors = ["sandmor <sandmor1220@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.3"
thiserror = "1"
euclid = "0.22"
parking_lot = "0.11"
bitflags = "1"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.6", features = ["shm", "allow-unsafe-code"] }
libc = "0.2"