[package]
name = "moving"
version = "0.1.0"
authors = ["sandmor <sandmor1220@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.3"
thiserror = "1"
euclid = "0.22"
parking_lot = "0.11"
mime = "0.3"
lazy_static = "1"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.6", features = ["shm", "allow-unsafe-code", "render"] }
libc = "0.2"
wayland-client = { version = "0", features = ["dlopen"] }
wayland-protocols = { version = "0", features = ["client"] }
tempfile = "3"
flume = { version = "0.9", default-features = false }

[target.'cfg(target_os = "redox")'.dependencies]
orbclient = "0.3"